# NDKStudy

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  functions.cpp  jni_dynamic_load.cpp
app/src/main/cpp/base/: base.h
app/src/main/java/com/example/ndkstudy/: MainActivity.kt
app/src/main/java/com/example/ndkstudy/jni/: Functions.kt
app/src/main/java/com/example/ndkstudy/samples/: DynicRegisterJniTest.kt  JavaCallNativeTest.kt
app/src/main/res/layout/: activity_dynic_register_jni_test.xml  activity_java_call_native_test.xml  activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
